--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fix": "run-s fix:*",
     "fix:prettier": "prettier --write .",
     "fix:lint": "eslint src --ext .ts --ext .js --fix",
-    "postinstall": "husky install"
+    "prepare": "husky install"
   },
   "engines": {
     "node": ">=14.15.0"
