--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
   "parserOptions": {
     "ecmaVersion": 12
   },
-  "rules": {}
+  "rules": {
+    "no-var": "error",
+    "eqeqeq": "error"
+  }
 }
