--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           node-version: 14.x
           registry-url: https://npm.pkg.github.com/
-          scope: '@pumpkindao'
+          scope: '@compassdao'
 
       - run: npm publish $(ls *.tgz)
         env:
